tests/build/cases/widget_new/missing_value5.stderr
error: expected expression, found `)`
 --> cases/widget_new/missing_value5.rs:6:9
  |
6 |         cursor =
  |         ^^^^^^ expected expression

error: expected `;`
 --> cases/widget_new/missing_value5.rs:8:9
  |
8 |         margin = {
  |         ^^^^^^

warning: unused import: `cursor`
 --> cases/widget_new/missing_value5.rs:1:27
  |
1 | use zero_ui::properties::{cursor, margin};
  |                           ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `zero_ui::core::units::PxPoint`
 --> cases/widget_new/missing_value5.rs:9:17
  |
9 |             use zero_ui::core::units::PxPoint;
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
